--- a/src/components/app-template/additional.css
+++ b/src/components/app-template/additional.css
@@ -83,7 +83,7 @@
     bottom: 2%;
     display: flex;
     flex-wrap: wrap;
-    column-gap: 18px;
+    column-gap: 1.5%;
     align-items: center;
     justify-content: center;
 }
