--- a/src/responsive.css
+++ b/src/responsive.css
@@ -85,8 +85,22 @@
         width: 32%;
     }
     .content .box span{
-        align-content: center;
+        align-content: center !important;
         width: 100%;
+    }
+    
+}
+@media screen and (max-width: 400px){
+    .content .box{
+        font-size: 0.3em ;
+    }
+    .content .box h3{
+        top: 4%;
+    }
+    .measurement{
+        height: 27% !important;
+        top: 40% !important;
+        width: 15% !important;
     }
     
 }
