--- a/src/components/signin/sign.css
+++ b/src/components/signin/sign.css
@@ -4,7 +4,7 @@
     background:url('../../assets/background.webp');
     position: relative;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
 }
 .weather-sign{
     position: relative;
